# Fijazo-Horrrocruxes-SRMC

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml  vercel.json
progression-service/: .env.example  Dockerfile  README.md  pyproject.toml
progression-service/src/progression_service/: consumer.py  main.py
progression-service/src/progression_service/api/: deps.py
progression-service/src/progression_service/api/routers/: achievements.py  internal.py  ranking.py  ranks.py  statistics.py
progression-service/src/progression_service/api/schemas/: achievements.py  ranking.py  ranks.py  statistics.py
progression-service/src/progression_service/application/: factory.py
progression-service/src/progression_service/application/services/: progression_service.py  ranking_service.py  statistics_service.py
progression-service/src/progression_service/core/: config.py  exceptions.py
progression-service/src/progression_service/domain/entities/: achievement.py  statistics.py  user.py
progression-service/src/progression_service/domain/repositories/: bet_repository.py  progression_repository.py  statistics_repository.py  user_repository.py
progression-service/src/progression_service/domain/services/: achievement_evaluator.py  achievements_catalog.py  rank_evaluator.py  rank_scorer.py  ranking_scorer.py  ranks_config.py  statistics_calculator.py
progression-service/src/progression_service/infrastructure/database/: mongo.py
progression-service/tests/: test_catalog_endpoints.py  test_recalc_consumer.py  test_statistics_calculator.py
(+51 files in other folders)
